feat(proxy): issue account proxy tokens
